Implement SP-2 v1 changes